fix downlads button size on mobile

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10666,8 +10666,13 @@ background-color: #69BFF0
 .detailed-page-title-hero {
   position: relative;
   width: 100%;
-  height: 861px;
   background-size: cover;
+  min-height: 861px;
+}
+@media screen and (min-width: 767px) {
+  .detailed-page-title-hero {
+    height: 861px;
+  }
 }
 
 .detailed-page-title-video {
@@ -10695,10 +10700,14 @@ background-color: #69BFF0
   content: "";
   position: absolute;
   height: 100%;
-  max-height: 861px;
   left: 0;
   top: 0;
   background: rgba(18, 21, 24, 0.4);
+}
+@media screen and (min-width: 767px) {
+  .detailed-page-title-container:after {
+    max-height: 861px;
+  }
 }
 
 .detailed-page-title-content-inner-container {
@@ -10941,6 +10950,12 @@ background-color: #69BFF0
   box-shadow: 0px 0px 0px 0px !important;
 }
 
+@media screen and (max-width: 767px) {
+  .material-downloads-btn-container {
+    height: 49px;
+    margin-bottom: 20px;
+  }
+}
 .material-downloads-btn:hover,
 .material-downloads-btn:active,
 .material-downloads-btn:focus {
