--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -419,8 +419,11 @@ background-color: #69BFF0
 .detailed-page-title-hero {
   position: relative;
   width: 100%;
-  height: 861px;
   background-size: cover;
+  min-height: 861px;
+  @media screen and (min-width: 767px) {
+    height: 861px;
+  }
 }
 .detailed-page-title-video {
   width: 100%;
@@ -444,10 +447,13 @@ background-color: #69BFF0
   content: "";
   position: absolute;
   height: 100%;
-  max-height: 861px;
+  
   left: 0;
   top: 0;
   background: rgba(18, 21, 24, 0.4);
+  @media screen and (min-width: 767px) {
+    max-height: 861px;
+  }
 }
 .detailed-page-title-content-inner-container {
   width: 100%;
@@ -687,6 +693,12 @@ background-color: #69BFF0
   background-color: #a6adb5 !important;
   border: 0 !important;
   box-shadow: 0px 0px 0px 0px !important;
+}
+@media screen and (max-width: 767px) {
+  .material-downloads-btn-container {
+    height: 49px;
+    margin-bottom: 20px;
+  }
 }
 .material-downloads-btn:hover,
 .material-downloads-btn:active,
